# test_templ

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: freertos_kernel.cmake
src/: main.cpp
